service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
    app.kubernetes.io/component: node-app
    app.kubernetes.io/instance: node-app
annotations:
    service.alpha.openshift.io/serving-cert-secret-name: mytls
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    deployment: node-app
  sessionAffinity: None
  type: ClusterIP
